# FlutterMediaToolsNative

./: .gitignore  .gitmodules  CMakeLists.txt
deps-tmp/Linux/x86_64/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
deps-tmp/linux/ffmpeg/lib/: libavcodec.so.59.18.100  libavdevice.so.59.4.100  libavfilter.so.8.24.100  libavformat.so.59.16.100  libavutil.so.57.17.100  libswresample.so.4.3.100  libswscale.so.6.4.100
deps-tmp/linux/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/resources/decoder/valid/: test.mp3_0_13000.pcm  test.mp3_12000_13000.pcm  test.ogg_0_13000.pcm  test.ogg_12000_13000.pcm  test.wav_0_13000.pcm  test.wav_12000_13000.pcm
src/resources/transcoder/valid/: test_mp3_0_0.aac  test_mp3_transcoder_0_12000.aac  test_mp3_transcoder_12000_13000.aac  test_mp3_transcoder_13000_0.aac  test_ogg_13000_0.aac  test_ogg_transcoder_0_0.aac  test_ogg_transcoder_0_12000.aac  test_ogg_transcoder_12000_13000.aac  test_wav_0_12000.aac  test_wav_12000_13000.aac  test_wav_13000_0.aac  test_wav_transcoder_0_0.aac
src/tests/buffer/: buffer_test.cpp
src/tests/decoder/: decoder_test.cpp
src/tests/encoder/: encoder_test.cpp
src/tests/helpers/: audio_helper.cpp  audio_helper.hpp  resources_helper.cpp  resources_helper.hpp
src/tests/inspector/: inspector_test.cpp
src/tests/resampler/: resampler_test.cpp
src/tests/transcoder/: transcoder_test.cpp
